# cheat_sheets

./: 2021_12_24_unit_testing.ipynb  alembic_cheatsheet.md  docker_cheat_sheet.md  gitCommandsOverview  k8s_cheatsheet.md  poetry_cheat_sheet.md  pyenv_cheat_sheet.md  pyproject.toml  pyspark-cheat-sheets.md  test.txt  uv_cheat_sheet  uv_cheat_sheet.md  venv_cheat_sheet.md
_jupyter/: 2021_12_24_unit_testing.ipynb
bash-details/: bash_cheatsheet.ipynb  shelltest.sh
git/: git_cheat_sheet.md
git/Pro Git Book - Scott Chacon and Ben Straub/: Chapter 1 -  Getting Started.ipynb  Chapter 2 - Git Basics.ipynb  Chapter 3 - Git Branching.ipynb  README.md  about_git.ipynb
git/write-yourself-a-git/: hello.py
git/write-yourself-a-git/libwyag/: libwyag.py  test.ipynb  wyag
gitlab_settings/: access_tokens.md  cicd.md  general  integrations.md  merge_requests.md  monitor.md  packages_and_registries.md  repository.md  service_accounts.md  webhooks.md
uv-details/: uv_cheat_sheet.md  uv_notes.ipynb  uv_publishing.ipynb
write-cli-tools/: README.md
write-cli-tools/argparse-greet/: pyproject.toml
write-cli-tools/argparse-greet/greet/: main.py
write-cli-tools/click-greet/: hello.py  pyproject.toml
write-cli-tools/click-greet/src/click_greet/: main.py
write-yourself-a-git/: pyproject.toml
write-yourself-a-git/libwyag/: libwyag.py
write_yourself_a_git/: README.md
write_yourself_a_git/notes/: 1_introduction.ipynb
