[project]
name = "click-greet"
version = "0.1.3"
authors = [
  { name="yj", email="yj@yj.yj" }
]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click==8.2.0",
    "twine>=6.1.0",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[project.scripts]
greet = "click_greet.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/click_greet"]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
explicit = false 

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
